[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
pretty_env_logger = "0.5"
log = "0.4"
wgpu = "0.16"
bytemuck = { version = "1.13", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.6"
console_log = "1.0.0"
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
