[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
wgpu = "0.16"
bytemuck = { version = "1.13", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
nalgebra = { version = "0.32.2", features = ["bytemuck"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = {version = "0.3.17", features = ["time", "env-filter"]}
console_error_panic_hook = "0.1.6"
tracing-web = "0.1.2"
time = { version = "0.3", features = ["wasm-bindgen"] }
wgpu = { version = "0.16.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
